Feature: soft delete on counselor (#189)
* refactor: add SQLDelete and SQLRestriction annotations to Counselor class

* refactor: add fetch join for counselor in CounselSession query

* refactor: update counselor deletion process to use CounselSessionService

* refactor: enhance Counselor class to handle inactive status and update CounselSession relationships

* refactor: update CounselorRepository to include active status checks and enhance query methods