@@ -30,8 +30,6 @@ import com.springboot.api.counselor.dto.UpdateCounselorRes;
 import com.springboot.api.counselor.dto.UpdateRoleReq;
 import com.springboot.api.counselor.entity.Counselor;
 import com.springboot.api.counselor.repository.CounselorRepository;
-import com.springboot.api.counselsession.entity.CounselSession;
-import com.springboot.api.counselsession.repository.CounselSessionRepository;
 import com.springboot.enums.RoleType;
 
 import jakarta.transaction.Transactional;
@@ -45,7 +43,6 @@ public class CounselorService {
 
     private final CounselorRepository counselorRepository;
     private final KeycloakUserService keycloakUserService;
-    private final CounselSessionRepository counselSessionRepository;
 
     @CacheEvict(value = "counselorNames", allEntries = true)
     @Transactional
@@ -59,7 +56,7 @@ public class CounselorService {
                 .roleType(addCounselorReq.getRoleType())
                 .build();
 
-        if (counselorRepository.existsByEmail(addCounselorReq.getEmail())) {
+        if (counselorRepository.existsActiveByEmail(addCounselorReq.getEmail())) {
             throw new DuplicatedEmailException();
         }
 
@@ -76,7 +73,7 @@ public class CounselorService {
         String username = jwt.getClaimAsString("preferred_username");
 
         Counselor counselor = counselorRepository
-                .findByUsername(username)
+                .findActiveByUsername(username)
                 .orElseThrow(() -> new IllegalArgumentException("Invalid counselor ID"));
 
         return new GetCounselorRes(counselor.getId(), counselor.getName(), counselor.getEmail(),
@@ -115,7 +112,7 @@ public class CounselorService {
     @Transactional
     public CounselorNameListRes getCounselorNames() {
         List<String> counselorNames = counselorRepository
-                .findByRoleTypeIn(Arrays.asList(RoleType.ROLE_USER, RoleType.ROLE_ADMIN)).stream()
+                .findActiveByRoleTypes(Arrays.asList(RoleType.ROLE_USER, RoleType.ROLE_ADMIN)).stream()
                 .map(Counselor::getName)
                 .filter(name -> name != null && !name.trim().isEmpty())
                 .sorted()
@@ -169,7 +166,7 @@ public class CounselorService {
      * 
      * @param counselorId 삭제할 상담사 ID
      */
-    @CacheEvict(value = "counselorNames", allEntries = true)
+    @CacheEvict(value = {"counselorNames", "sessionList"} , allEntries = true)
     @Transactional
     public void deleteCounselor(String counselorId) {
         Counselor counselor = counselorRepository.findById(counselorId)
@@ -181,7 +178,7 @@ public class CounselorService {
                 List<UserRepresentation> users = keycloakUserService.getUsersByUsername(counselor.getUsername());
                 if (!users.isEmpty()) {
                     // Keycloak에서 사용자 삭제
-                    keycloakUserService.deleteUser(users.get(0).getId());
+                    keycloakUserService.deleteUser(users.getFirst().getId());
                     log.info("Keycloak에서 사용자 삭제 완료: {}", counselor.getUsername());
                 }
             }
@@ -189,13 +186,6 @@ public class CounselorService {
             log.error("Keycloak에서 사용자 삭제 중 오류 발생: {}", e.getMessage(), e);
             // Keycloak 삭제 실패해도 DB에서는 삭제 진행
         }
-
-        // 상담사와 연결된 모든 상담 세션에서 상담사 참조를 null로 변경
-        List<CounselSession> counselSessions = counselSessionRepository.findByCounselorId(counselor.getId());
-        for (CounselSession session : counselSessions) {
-            session.updateCounselor(null);
-        }
-        log.info("상담사({})와 연결된 상담 세션 {}개의 상담사 참조를 null로 변경했습니다.", counselor.getId(), counselSessions.size());
 
         // DB에서 상담사 삭제
         counselorRepository.deleteById(counselorId);
@@ -227,7 +217,7 @@ public class CounselorService {
 
             // 비밀번호 초기화
             keycloakUserService.resetPassword(
-                    users.get(0).getId(),
+                    users.getFirst().getId(),
                     resetPasswordReq.getNewPassword(),
                     resetPasswordReq.isTemporary());
 
@@ -270,8 +260,13 @@ public class CounselorService {
     public CounselorPageRes getCounselorsByPage(int page, int size) {
         // RoleType.ROLE_ASSISTANT가 맨 위로 오도록 정렬하는 커스텀 쿼리 메서드를 사용
         PageRequest pageRequest = PageRequest.of(page, size);
-        Page<Counselor> counselorPage = counselorRepository.findAllWithRoleTypeOrder(pageRequest);
+        Page<Counselor> counselorPage = counselorRepository.findAllActiveWithRoleTypeOrder(pageRequest);
 
         return CounselorPageRes.fromPage(counselorPage);
+    }
+
+    public Counselor findCounselorById(String counselorId){
+        return counselorRepository.findActiveById(counselorId)
+            .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 상담사 ID입니다"));
     }
 }
